cmake_minimum_required(VERSION 3.20)
project(C++Primer)

set(CMAKE_CXX_STANDARD 14)

add_executable(C++Primer main.cpp)

add_executable(2.1.2convert src/chapter2/2.1basic/2.1.2convert.cpp)

add_executable(2.1.3literal src/chapter2/2.1basic/2.1.3literal.cpp)
add_executable(2.2.1variableDefine src/chapter2/2.2variable/2.2.1variableDefine.cpp)
add_executable(2.2.2DeclarationAndDefinition src/chapter2/2.2variable/2.2.2DeclarationAndDefinition.cpp)
add_executable(2.2.3identifier src/chapter2/2.2variable/2.2.3identifier.cpp)
add_executable(2.2.4scope src/chapter2/2.2variable/2.2.4scope.cpp)
add_executable(2.3.1reference src/chapter2/2.3compoundType/2.3.1reference.cpp)
add_executable(2.3.3pointToReference src/chapter2/2.3compoundType/2.3.3pointToReference.cpp)
add_executable(2.4.1constReference src/chapter2/2.4const/2.4.1constReference.cpp)
add_executable(2.4.2pointerAndConst src/chapter2/2.4const/2.4.2pointerAndConst.cpp)
add_executable(2.4.3low-levelConst src/chapter2/2.4const/2.4.3low-levelConst.cpp)
add_executable(2.4.4constexpr src/chapter2/2.4const/2.4.4constexpr.cpp)
add_executable(2.5.1typealias src/chapter2/2.5typealias/2.5.1typealias.cpp)
add_executable(2.5.2auto src/chapter2/2.5typealias/2.5.2auto.cpp)
add_executable(2.5.3decltype src/chapter2/2.5typealias/2.5.3decltype.cpp)
add_executable(3.2.2stringOperation src/chapter3/3.2string/3.2.2stringOperation.cpp)
add_executable(3.2.1stringdef src/chapter3/3.2string/3.2.1stringdef.cpp)
add_executable(3.3.1vectorInit src/chapter3/3.3vector/3.3.1vectorInit.cpp)
add_executable(3.5.1arrayDef src/chapter3/3.5array/3.5.1arrayDef.cpp)
add_executable(3.5.2arrayVis src/chapter3/3.5array/3.5.2arrayVis.cpp)
add_executable(3.5.3pointAndArray src/chapter3/3.5array/3.5.3pointAndArray.cpp)
add_executable(3.5.4C_styleString src/chapter3/3.5array/3.5.4C_styleString.cpp)
add_executable(3.5.5interfaceToOldCode src/chapter3/3.5array/3.5.5interfaceToOldCode.cpp)
add_executable(3.6multiArray src/chapter3/3.5array/3.6multiArray.cpp)
add_executable(test src/chapter8/8.3sstream/testAlarm.c)
add_executable(4.3test src/chapter4/4.3LogicAndRelationOpera/4.3test.cpp)
add_executable(4.4AssignOperator src/chapter4/4.4Assign/4.4AssignOperator.cpp)
add_executable(4.5test src/chapter4/4.5IncrAndDecr/4.5test.cpp)
add_executable(4.11sizeof src/chapter4/4.9sizeof/4.9sizeof.cpp)
add_executable(4.11.3cast-name src/chapter4/4.11cast/4.11.3cast-name.cpp)
add_executable(5.6exception src/chapter5/5.6exception.cpp)
add_executable(6.1funcBasic src/chapter6/6.1Basic/6.1funcBasic.cpp)
add_executable(6.1.1localVariable src/chapter6/6.1Basic/6.1.1localVariable.cpp)
add_executable(6.2.4array src/chapter6/6.1Basic/6.2.4array.cpp)
add_executable(6.2.6initializer_list src/chapter6/6.1Basic/6.2.6initializer_list.cpp)
add_executable(6.3.2test src/chapter6/6.3return/6.3.2test.cpp)
add_executable(6.6.0test src/chapter6/6.6func/6.6.0test.cpp)
add_executable(6.4funcOverload src/chapter6/6.4overload/6.4funcOverload.cpp)
add_executable(funcPtr src/chapter6/6.7funcPtr/funcPtr.cpp)
add_executable(Person src/chapter7/7.1abstractData/Person.cpp)

add_executable(namelookup src/chapter7/7.4lookup/namelookup.cpp)
add_executable(constructor constructor.cpp)
add_executable(7.5.5aggregateClass src/chapter7/7.5constructor/7.5.5aggregateClass.cpp)
add_executable(7.6staticMembers src/chapter7/7.6staticMembers/7.6staticMembers.cpp)
add_executable(IOClass src/chapter8/8.1IOClass/IOClass.cpp)
add_executable(fileIO src/chapter8/8.2fileIO/fileIO.cpp)
add_executable(sstream src/chapter8/8.3sstream/sstream.cpp)

add_executable(testAlarm src/chapter8/8.3sstream/testAlarm.c)
add_executable(9.2.1Iterator src/chapter9/9.2Iterator/9.2.1Iterator.cpp)
add_executable(partition src/chapter10/10.3personalOpt/partition.cpp)
add_executable(moreIterator src/chapter10/10.4MoreIterator/moreIterator.cpp)